# smart-thermostat

./: .gitignore  README.md
controller-node/: .gitignore  platformio.ini
controller-node/data/: app.js  index.html  style.css
controller-node/src/: config.h  ir_controller.cpp  ir_controller.h  main.cpp  secrets.h.example  thermostat.cpp  thermostat.h  web_server.cpp  web_server.h
firmware-rs/: Cargo.toml  HARDWARE_VALIDATION.md  README.md  secrets.env.example
firmware-rs/.cargo/: config.toml
firmware-rs/common/: Cargo.toml
firmware-rs/common/src/: config.rs  lib.rs  schedule.rs  thermostat.rs  topics.rs  types.rs
firmware-rs/controller/: Cargo.toml  build.rs  partitions.csv  sdkconfig.defaults
firmware-rs/controller/src/: esp.rs  host.rs  ir.rs  ir_codes.rs  main.rs
firmware-rs/controller/web/: app.js  index.html  style.css
firmware-rs/sensor/: Cargo.toml  sdkconfig.defaults
firmware-rs/sensor/.cargo/: config.toml
firmware-rs/sensor/src/: esp.rs  host.rs  main.rs
firmware-rs/tools/: hardware_validation.sh
sensor-node/: platformio.ini
sensor-node/src/: main.cpp  secrets.h.example
tools/ir_learner/: platformio.ini
tools/ir_learner/data/: app.js  index.html  style.css
tools/ir_learner/src/: main.cpp
