[package]
name = "thermostat-controller"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
thermostat-common = { path = "../common" }
sha2.workspace = true
esp-idf-svc = { version = "0.51", optional = true }
esp-idf-sys = { version = "0.36", optional = true }
esp-idf-hal = { version = "0.45", optional = true, features = ["rmt-legacy"] }
embedded-svc = { workspace = true, optional = true }
log = { workspace = true, optional = true }

[target.'cfg(not(any(target_arch = "xtensa", target_arch = "riscv32")))'.dependencies]
axum.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rumqttc.workspace = true
tower-http.workspace = true

[features]
default = []
esp32 = ["dep:esp-idf-svc", "dep:esp-idf-sys", "dep:esp-idf-hal", "dep:embedded-svc", "dep:log"]

[build-dependencies]
embuild = "0.33"

[[bin]]
name = "thermostat-controller"
path = "src/main.rs"
